<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_recipes"
            android:icon="@drawable/ic_recipe"
            android:title="@string/menu_recipes" />
        <item
            android:id="@+id/nav_meal_plan"
            android:icon="@drawable/ic_meal_plan"
            android:title="@string/menu_meal_plan" />
        <item
            android:id="@+id/nav_grocery_list"
            android:icon="@drawable/ic_grocery_list"
            android:title="@string/menu_grocery_list" />
    </group>

    <item android:title="Account">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/menu_profile" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>
</menu> 